@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T08:28:23Z",
+  "timestamp" : "2022-05-10T16:37:42Z",
   "count_outdated" : 446,
   "uniques_outdated" : 247,
-  "count" : 477,
-  "uniques" : 268,
+  "count" : 479,
+  "uniques" : 269,
   "clones" : [
     {
       "timestamp": "2022-04-28T00:00:00Z",
@@ -63,10 +63,10 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 0, 2 ]
     }
   ]
 }
