@@ -1,6 +1,6 @@
 {
-  "count": 31,
-  "uniques": 13,
+  "count": 33,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-04-28T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
